Endpoint POST - Inserção de Cliente