@@ -4,7 +4,6 @@ import br.com.alura.comex.model.Endereco;
 import lombok.Data;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 public class EnderecoDto {
@@ -26,7 +25,8 @@ public class EnderecoDto {
     }
 
     public static List<EnderecoDto> converter(List<Endereco> enderecos) {
-        return enderecos.stream().map(EnderecoDto::new).collect(Collectors.toList());
+        return enderecos.stream().map(EnderecoDto::new).toList();
     }
+
 
 }
